Completed punchcard modal, but the design has a bug: business names on the punchcard are centered throughout the entire width of the card, but if the name is long enough, and it stays centered, then it will get covered up by banner

--- a/pages/punch-cards/punch-cards-tmpl.handlebars
+++ b/pages/punch-cards/punch-cards-tmpl.handlebars
@@ -21,7 +21,7 @@
     <h2 class="no-punch-cards">Oh no! You have no Elite Punchcards</h2>
     {{else}}
       {{#each elite}}
-      <div class="punchcard row">
+      <div class="punchcard row" data-id="{{this.id}}">
         {{! Puncard Details }}
         <div class="details span5">
           <img src="{{filepicker this.businessLogo 50 50}}" width="50" height="50" alt="{{this.businessName}}" class="punchcard-business-logo">
@@ -81,7 +81,7 @@
     <h2 class="no-punch-cards">Oh no! You have no Punchcards</h2>
     {{else}}
       {{#each regular}}
-      <div class="punchcard row">
+      <div class="punchcard row" data-id="{{this.id}}">
         {{! Puncard Details }}
         <div class="details span5">
           <img src="{{filepicker this.businessLogo 50 50}}" width="50" height="50" alt="{{this.businessName}}" class="punchcard-business-logo">
