--- a/styles/main.less
+++ b/styles/main.less
@@ -17,6 +17,7 @@
 @import "checkboxes.less";
 @import "pages.less";
 @import "icons.less";
+@import "punchcard-stack.less";
 
 html {
   background: url('@{texture-linen}');
