fixed h1 bug in product details modal

--- a/modals/product-details/product-details.less
+++ b/modals/product-details/product-details.less
@@ -37,6 +37,7 @@
   font-size: 28px;
   line-height: 32px;
   margin-bottom: 0;
+  text-align: left;
 }
 
 .product-details-modal .product-details .product-business {
