--- a/modals/punchcard/punchcard-tmpl.handlebars
+++ b/modals/punchcard/punchcard-tmpl.handlebars
@@ -1,3 +1,6 @@
+{{! Modal Close }}
+<div class="modal-close"></div>
+
 {{! Business Logo }}
 <div class="business-logo-inset">
   <img class="business-logo" src="{{filepicker punchcard.businessLogo 90 90}}" alt="{{punchcard.businessName}}">
