made buttons acceptable

--- a/styles/pages.less
+++ b/styles/pages.less
@@ -52,5 +52,14 @@
 }
 
 .header-actions-right {
+  padding-top: 5px;
   text-align: right;
+}
+
+.header-actions-right .btn {
+  box-shadow: 0 1px 0 #FFF;
+  font-size: 12px;
+  font-weight: 800;
+  color: #666;
+  text-shadow: 0 1px 0 #FFF;
 }
