--- a/styles/variables.less
+++ b/styles/variables.less
@@ -92,8 +92,8 @@
 @btnBackgroundHighlight:            darken(@white, 10%);
 @btnBorder:                         #ccc;
 
-@btnPrimaryBackground:              #ffe783;
-@btnPrimaryBackgroundHighlight:     #d4bb5f;
+@btnPrimaryBackground:              #ffeb5a;
+@btnPrimaryBackgroundHighlight:     #d1ae53;
 
 @btnInfoBackground:                 #5bc0de;
 @btnInfoBackgroundHighlight:        #2f96b4;
