--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -13,9 +13,10 @@
 .btn {
   display: inline-block;
   .ie7-inline-block();
-  padding: 4px 12px;
+  padding: 8px 18px 7px 18px;
   margin-bottom: 0; // For input.btn
-  font-size: @font-size-small;
+  font-size: 14px;
+  font-weight: 600;
   line-height: @line-height-base;
   text-align: center;
   vertical-align: middle;
@@ -149,6 +150,8 @@ input[type="button"] {
 // -------------------------
 .btn-primary {
   .buttonBackground(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight, @gray-dark);
+  .box-shadow(~"inset 0 1px 0 rgba(255, 255, 255, 0.4), inset 0 -1px 0 rgba(255, 255, 255, 0.25), 0 1px 2px rgba(0, 0, 0, 0.2)");
+  text-shadow: 0 1px 0 rgba(255,255,255, 0.2);
 }
 // Warning appears are orange
 .btn-warning {
