--- a/styles/dropdowns.less
+++ b/styles/dropdowns.less
@@ -60,6 +60,8 @@
      -moz-background-clip: padding;
           background-clip: padding-box;
 
+  .reset-filter();
+
   // Aligns the dropdown menu to right
   &.pull-right {
     right: 0;
