revisited button issues. Mostly fixed now

--- a/components/header-nav/main.less
+++ b/components/header-nav/main.less
@@ -77,12 +77,13 @@
 }
 
 .header-navbar li > a:active,
+.header-navbar li > a:focus,
 .header-navbar li > a:hover,
 .header-navbar .dropdown:hover > a,
 .header-navbar li.active > a {
   color: @header-navbar-link-active-color;
   background-color: transparent;
-  *background-color: none;
+  background: none;
   border-bottom: solid @header-navbar-link-active-color 2px;
 }
 
