--- a/styles/grid.less
+++ b/styles/grid.less
@@ -7,7 +7,7 @@
 #grid > .core(@gridColumnWidth, @gridGutterWidth);
 
 // Fluid (940px)
-#grid > .fluid(@fluidGridColumnWidth, @fluidGridGutterWidth);
+// #grid > .fluid(@fluidGridColumnWidth, @fluidGridGutterWidth);
 
 // Reset utility classes due to specificity
 [class*="span"].hide,
