make cancel buttons type=button so there's only one submit element

--- a/modals/update-password/update-password-tmpl.handlebars
+++ b/modals/update-password/update-password-tmpl.handlebars
@@ -10,7 +10,7 @@
   </div>
   <div class="control-group">
     <div class="controls">
-      <button class="btn btn-large btn-cancel">Cancel</button>
+      <button class="btn btn-large btn-cancel" type="button">Cancel</button>
       <button class="btn btn-large">Submit</button>
     </div>
   </div>
