pretty much finished build system

--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -8,13 +8,13 @@
     <div class="span6 nav-wrapper">
       <ul class="nav">
         <li>
-          <a href="/#/explore">Explore</a>
+          <a href="#/explore">Explore</a>
         </li>
         <li>
-          <a href="/#/collections">My Collections</a>
+          <a href="#/collections">My Collections</a>
         </li>
         <li class="dropdown dropdown-more">
-          <a href="/#/more">More</a>
+          <a href="#/more">More</a>
           <ul class="dropdown-menu">
             <li>
               <a href="#">How it Works</a>
@@ -58,10 +58,10 @@
               <a href="#" class="edit-keytag-link">Connect your Keytag</a>
             </li>
             <li>
-              <a href="/#/my-punchcards">Your PunchCards</a>
+              <a href="#/my-punchcards">Your PunchCards</a>
             </li>
             <li>
-              <a href="/#/settings">Settings</a>
+              <a href="#/settings">Settings</a>
             </li>
             <li>
               <a href="#">Log Out</a>
