--- a/pages/explore/explore-tmpl.handlebars
+++ b/pages/explore/explore-tmpl.handlebars
@@ -17,15 +17,15 @@
 
       <div class="btn-group filters-btn-group">
         <a class="btn btn-large filter-popular{{#in options.sort "popular"}} active{{/in}}"
-            href="/#/explore/popular">
+            href="#/explore/popular">
           Popular
         </a>
         <a class="btn btn-large filter-nearby{{#in options.sort "distance"}} active{{/in}}"
-            href="/#/explore/nearby">
+            href="#/explore/nearby">
           Nearby
         </a>
         <a class="btn btn-large filter-random{{#in options.sort "random"}} active{{/in}}"
-            href="/#/explore/random">
+            href="#/explore/random">
           Mix-It-Up!
         </a>
       </div>
