added logout capability

--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -64,7 +64,7 @@
               <a href="#/settings">Settings</a>
             </li>
             <li>
-              <a href="#">Log Out</a>
+              <a href="#" class="logout">Log Out</a>
             </li>
         </ul>
       </div>
