fixed overflow, but truncation isn't nice

--- a/modals/punchcard/punchcard-tmpl.handlebars
+++ b/modals/punchcard/punchcard-tmpl.handlebars
@@ -18,9 +18,9 @@
 
     {{! Punchcard Type Ribbon }}
     {{#if punchcard.isElite}}
-    <div class="banner-elite"></div>
+    <div class="banner banner-elite"></div>
     {{else}}
-    <div class="banner-regular"></div>
+    <div class="banner banner-regular"></div>
     {{/if}}
 
     {{! Punchcard Number of Rewards }}
