added legal page

--- a/styles/scaffolding.less
+++ b/styles/scaffolding.less
@@ -33,3 +33,8 @@
   border-radius: 8px;
   box-shadow: 0 0 6px rgba(0,0,0, 0.33);
 }
+
+.plateau-page {
+  padding-left: 20px;
+  padding-right: 20px;
+}
