made charities page a little more flexible, made charities inline-block so we could center them int he container

--- a/pages/charities/charities-style.less
+++ b/pages/charities/charities-style.less
@@ -1,5 +1,5 @@
 /**
- * Warning: this file is straight up from PSD2HTML
+ * Warning: this file is straight up from PSD2HTML with a little tweaks
  */
 
 @import "/styles/variables.less";
@@ -9,11 +9,13 @@
   margin:0 0 50px;
   padding:0;
   list-style:none;
-  width:110%;
+  width:100%;
   overflow:hidden;
+  text-align: center;
 }
 .char-list li{
-  float:left;
+  display: inline-block;
+  text-align: left;
   margin:0 6px 32px 26px;
   width:459px;
   height:201px;
