--- a/pages/charities/charities-tmpl.handlebars
+++ b/pages/charities/charities-tmpl.handlebars
@@ -1,5 +1,8 @@
-<h1 class="page-title">Legal</h1>
+<h1 class="page-title">Charities</h1>
 
+<div class="span8 offset1">
+
+</div>
 <ul class="char-list">
   <li>
     <div class="col">
