--- a/modals/update-password/update-password-tmpl.handlebars
+++ b/modals/update-password/update-password-tmpl.handlebars
@@ -1,11 +1,11 @@
 <h1 class="modal-title">Please Enter Your Current Password</h1>
 <form id="update-password-form" class="form-horizontal">
   <div class="control-group">
-    <label for="edit-collection-name" class="control-label">
+    <label for="field-password" class="control-label">
       Password
     </label>
     <div class="controls">
-      <input type="password" class="field-password">
+      <input type="password" class="field-password" id="field-password">
     </div>
   </div>
   <div class="control-group">
