added gb-for-biz WIP

--- a/styles/scaffolding.less
+++ b/styles/scaffolding.less
@@ -29,6 +29,8 @@
 // -------------------
 
 .plateau {
+  display: table;
+  width: 100%;
   padding: 50px 0;
   border-radius: 8px;
   box-shadow: 0 0 6px rgba(0,0,0, 0.33);
