got checkbox to appear

--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -21,18 +21,20 @@
       <div class="controls">
         <input type="email" class="field-email" id="field-email">
       </div>
+
       <label for="field-password" class="control-label">
         Password
       </label>
       <div class="controls">
         <input type="password" class="field-password" id="field-password">
       </div>
+
+      <label for="remember" class="checkbox-label">
+        Remember Me
+      </label>
       <div class="controls">
         <input type="checkbox" id="remember" class="checkbox remember-checkbox">
       </div>
-      <label for="remember" class="control-label">
-        Remember Me
-      </label>
     </div>
   </form>
 </div>
