--- a/pages/gb-for-businesses/gb-for-businesses-tmpl.handlebars
+++ b/pages/gb-for-businesses/gb-for-businesses-tmpl.handlebars
@@ -7,42 +7,46 @@
       <br />Give us a shout!
     </h2>
     <div class="span4 offset2">
-      <form action="#" class="form form-vertical" id="contact-form">
+      <form action="#" class="form form-vertical" id="business-contact-form">
         <div class="control-group row">
           <div class="span2">
-            <label class="control-label" for="location-name-input">Your Name</label>
+            <label class="control-label" for="name-input">Your Name</label>
             <div class="controls">
-              <input class="span2 field-name" type="text" id="location-name-input" placeholder="Enter your name">
+              <input class="span2 field-name" type="text" id="name-input" placeholder="Enter your name">
             </div>
           </div>
           <div class="span2">
-            <label class="control-label" for="location-name-input">Business Name</label>
+            <label class="control-label" for="businessName-input">Business Name</label>
             <div class="controls">
-              <input class="span2 field-name" type="text" id="location-name-input" placeholder="Enter your business name">
+              <input class="span2 field-businessName" type="text" id="businessName-input" placeholder="Enter your business name">
             </div>
           </div>
         </div>
 
         <div class="control-group row">
           <div class="span2">
-            <label class="control-label" for="location-name-input">Email Address</label>
+            <label class="control-label" for="email-input">Email Address</label>
             <div class="controls">
-              <input class="span2 field-name" type="text" id="location-name-input" placeholder="Enter your email address">
+              <input class="span2 field-email" type="text" id="email-input" placeholder="Enter your email address">
             </div>
           </div>
           <div class="span2">
-            <label class="control-label" for="location-name-input">Business Zip</label>
+            <label class="control-label" for="zip-input">Business Zip</label>
             <div class="controls">
-              <input class="span2 field-name" type="text" id="location-name-input" placeholder="Enter your zip code">
+              <input class="span2 field-zip" type="text" id="zip-input" placeholder="Enter your zip code">
             </div>
           </div>
         </div>
 
         <div class="control-group row">
           <div class="span4">
-            <label class="control-label" for="">Questions/Comments?</label>
-            <textarea name="" id="" rows="10"></textarea>
+            <label class="control-label" for="comments-input">Questions/Comments?</label>
+            <textarea class="span4 field-comments" name="comments" id="comments-input" rows="10"></textarea>
           </div>
+        </div>
+
+        <div class="contact-form-actions">
+          <button type="submit" class="btn btn-primary save">Submit</button>
         </div>
       </form>
     </div>
