added new sprite classes

--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -5,15 +5,15 @@
 </div>
 
 <div class="row">
-  <button class="btn btn-facebook" type="button">Connect with Facebook</button>
+  <button class="facebook-login-button span2 offset1" type="button">Connect with Facebook</button>
 </div>
 
 <div class="row">
-  <span class="span5 or-divider">or</span>
+  <span class="span4 or-divider">or</span>
 </div>
 
 <div class="row">
-  <form class="login-form span1 offset1">
+  <form class="login-form span2 offset1">
     <div class="control-group">
       <label for="field-email" class="control-label">
         Email
@@ -28,12 +28,19 @@
       <div class="controls">
         <input type="password" class="field-password" id="field-password">
       </div>
-
+    </div>
+    <div class="control-group">
       <label for="remember" class="checkbox-label">
         Remember Me
       </label>
       <div class="controls">
         <input type="checkbox" id="remember" class="checkbox remember-checkbox">
+        <a href="#">Forgot Password</a>
+      </div>
+    </div>
+    <div class="control-group">
+      <div class="controls">
+        <button type="submit" class="login-button span2">Log In</button>
       </div>
     </div>
   </form>
