did a lot of the css

--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -5,7 +5,7 @@
 </div>
 
 <div class="row">
-  <button class="facebook-login-button span2 offset1" type="button">Connect with Facebook</button>
+  <button class="facebook-login-button" type="button">Connect with Facebook</button>
 </div>
 
 <div class="row">
@@ -13,28 +13,27 @@
 </div>
 
 <div class="row">
-  <form class="login-form span2 offset1">
+  <form class="login-form span2">
     <div class="control-group">
       <label for="field-email" class="control-label">
         Email
       </label>
       <div class="controls">
-        <input type="email" class="field-email" id="field-email">
+        <input type="email" class="login-field field-email" id="field-email">
       </div>
 
       <label for="field-password" class="control-label">
         Password
       </label>
       <div class="controls">
-        <input type="password" class="field-password" id="field-password">
+        <input type="password" class="login-field field-password" id="field-password">
       </div>
     </div>
     <div class="control-group">
-      <label for="remember" class="checkbox-label">
-        Remember Me
-      </label>
+      <label for="remember">Remember Me</label>
       <div class="controls">
         <input type="checkbox" id="remember" class="checkbox remember-checkbox">
+        <label for="remember" class="checkbox-label checkbox-small"></label>
         <a href="#">Forgot Password</a>
       </div>
     </div>
