fixed fb button css

--- a/modals/login/login-style.less
+++ b/modals/login/login-style.less
@@ -1,5 +1,12 @@
 .facebook-login-button {
   margin-left: 80px;
+  line-height: 72px;
+  color: white;
+  text-shadow: 0 -2px 1px rgba(0,0,0,0.4);
+  font-size: 20px;
+  padding-left: 64px;
+  border: none;
+  background-color: transparent;
 }
 
 .or-divider {
