fixed login button

--- a/modals/login/login-style.less
+++ b/modals/login/login-style.less
@@ -26,3 +26,12 @@
 .login-form .login-field {
   width:301px;
 }
+
+.login-button {
+  font-size: 20px;
+  color: white;
+  font-weight: bold;
+  text-shadow: 0 -2px 1px rgba(0,0,0,0.3);
+  border: none;
+  background-color: transparent;
+}
