added how it works page

--- a/components/products-list/products-list-style.less
+++ b/components/products-list/products-list-style.less
@@ -129,6 +129,7 @@
   width: 33.33333333333333%;
   border-left: solid #bebebe 1px;
   font-weight: 600;
+  line-height: @line-height-base;
 }
 
 .product-list-item .product-feelings > li:first-child {
