--- a/styles/typography.less
+++ b/styles/typography.less
@@ -86,6 +86,10 @@ h2 small { font-size: @font-size-base * 1.25; } // ~18px
 h3 small { font-size: @font-size-base; }
 h4 small { font-size: @font-size-base; }
 
+.primary-title {
+  color: @brand-primary;
+}
+
 
 // Page header
 // -------------------------
@@ -113,7 +117,7 @@ ol ul {
   margin-bottom: 0;
 }
 li {
-  line-height: @line-height-base;
+  line-height: @line-height-base + 4;
 }
 
 // Remove default list styles
