--- a/styles/scaffolding.less
+++ b/styles/scaffolding.less
@@ -40,3 +40,16 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.plateau-page + .plateau-page {
+  margin-top: 80px;
+}
+
+// Account for extra padding I guess
+.span4 > .plateau-page,
+.span5 > .plateau-page,
+.span6 > .plateau-page,
+.span7 > .plateau-page,
+.span8 > .plateau-page,
+.span9 > .plateau-page,
+.span10 > .plateau-page { margin-left: -20px; }
