fixed input css

--- a/modals/login/login-style.less
+++ b/modals/login/login-style.less
@@ -1,3 +1,9 @@
+.login-modal h1 {
+  font-size: 46px;
+  line-height: 50px;
+  color: #4c4c4c;
+}
+
 .facebook-login-button {
   margin-left: 80px;
   line-height: 72px;
