--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -19,14 +19,14 @@
         Email
       </label>
       <div class="controls">
-        <input type="email" class="login-field field-email" id="field-email">
+        <input type="email" class="input-tall login-field field-email" id="field-email">
       </div>
 
       <label for="field-password" class="control-label">
         Password
       </label>
       <div class="controls">
-        <input type="password" class="login-field field-password" id="field-password">
+        <input type="password" class="input-tall login-field field-password" id="field-password">
       </div>
     </div>
     <div class="control-group">
