--- a/components/header-nav/main.handlebars
+++ b/components/header-nav/main.handlebars
@@ -17,25 +17,25 @@
           <a href="#/more">More</a>
           <ul class="dropdown-menu">
             <li>
-              <a href="/how-it-works.html">How it Works</a>
+              <a href="#/how-it-works">How it Works</a>
             </li>
             <li>
-              <a href="/locations.html">Locations</a>
+              <a href="#/locations">Locations</a>
             </li>
             <li>
-              <a href="/about-us.html">About Us</a>
+              <a href="#/about-us">About Us</a>
             </li>
             <li>
-              <a href="/charities.html">Charities</a>
-            </li>{{!
-            <li>
-              <a href="/contact.html">Contact Us</a>
-            </li> }}
-            <li>
-              <a href="/privacy.html">Privacy</a>
+              <a href="#/charities">Charities</a>
             </li>
             <li>
-              <a href="/legal.html">Legal</a>
+              <a href="#/gb-for-businesses">Contact Us</a>
+            </li>
+            <li>
+              <a href="#/privacy">Privacy</a>
+            </li>
+            <li>
+              <a href="#/legal">Legal</a>
             </li>
             <li class="get-the-app">
               <a href="https://itunes.apple.com/ie/app/goodybag/id506924389?mt=8">Get the App!</a>
