tweak how it works mobile positioning system

--- a/pages/how-it-works/how-it-works-style.less
+++ b/pages/how-it-works/how-it-works-style.less
@@ -51,3 +51,12 @@
 .plateau-mobile .section-right .content-inner {
   margin-left: 100px;
 }
+
+.section-mobile-2 .img-wrapper > img {
+  margin-left: -94px;
+}
+
+.section-mobile-2 .content-inner {
+  width: 400px;
+  margin-left: -40px;
+}
