styled forgot password link

--- a/modals/login/login-style.less
+++ b/modals/login/login-style.less
@@ -4,6 +4,10 @@
   color: #4c4c4c;
 }
 
+.login-form {
+  width: 322px;
+}
+
 .facebook-login-button {
   margin-left: 80px;
   line-height: 72px;
@@ -30,7 +34,7 @@
 }
 
 .login-form .login-field {
-  width:301px;
+  width:100%;
 }
 
 .login-button {
@@ -40,4 +44,11 @@
   text-shadow: 0 -2px 1px rgba(0,0,0,0.3);
   border: none;
   background-color: transparent;
+}
+
+.forgot-password {
+  float: right;
+  color: #4c4c4c;
+  text-decoration: underline;
+  font-size: 14px;
 }
