--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -13,7 +13,7 @@
 </div>
 
 <div class="row">
-  <form class="login-form span2">
+  <form class="login-form">
     <div class="control-group">
       <label for="field-email" class="control-label">
         Email
@@ -34,7 +34,7 @@
       <div class="controls">
         <input type="checkbox" id="remember" class="checkbox remember-checkbox">
         <label for="remember" class="checkbox-label checkbox-small"></label>
-        <a href="#">Forgot Password</a>
+        <a href="javascript:void(0)" class="forgot-password">Forgot Password</a>
       </div>
     </div>
     <div class="control-group">
