--- a/styles/scaffolding.less
+++ b/styles/scaffolding.less
@@ -53,3 +53,23 @@
 .span8 > .plateau-page,
 .span9 > .plateau-page,
 .span10 > .plateau-page { margin-left: -20px; }
+
+.fancy-separator {
+  text-align: center;
+}
+
+.fancy-separator > p {
+  display: inline-block;
+  width: 50%;
+  border-bottom: 1px solid #888;
+  line-height: 2px;
+}
+
+.fancy-separator > p > span {
+  font-style: italic;
+  font-size: 14px;
+  font-weight: 500;
+  color: @gray;
+  padding: 0 8px;
+  background-color: #fff;
+}
