login works, including remember me

--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -32,7 +32,7 @@
     <div class="control-group">
       <label for="remember">Remember Me</label>
       <div class="controls">
-        <input type="checkbox" id="remember" class="checkbox remember-checkbox">
+        <input type="checkbox" id="remember" class="checkbox remember-checkbox" checked="checked">
         <label for="remember" class="checkbox-label checkbox-small"></label>
         <a href="javascript:void(0)" class="forgot-password">Forgot Password</a>
       </div>
