all done except button sprite.  router on completion works

--- a/modals/forgot-password/forgot-password-tmpl.handlebars
+++ b/modals/forgot-password/forgot-password-tmpl.handlebars
@@ -7,7 +7,7 @@
       <input type="email" id="email" class="field-email input-tall" placeholder="you@example.com">
     </div>
     <div class="controls">
-      <button type="submit" class="btn btn-primary">Send Email</button>
+      <button type="submit" class="btn btn-primary send-email-btn">Send Email</button>
     </div>
   </div>
 </form>
