--- a/styles/pages.less
+++ b/styles/pages.less
@@ -63,3 +63,8 @@
   color: #666;
   text-shadow: 0 1px 0 #FFF;
 }
+
+.page-wrapper {
+  padding-left: @gridGutterWidth;
+  padding-right: @gridGutterWidth;
+}
