fixed input-tall specificity

--- a/styles/forms.less
+++ b/styles/forms.less
@@ -293,7 +293,7 @@ textarea[class*="span"],
   display: inline-block;
 }
 
-.input-tall {
+input.input-tall {
   padding: 10px 10px 11px;
   font: 17px/21px Arial, Helvetica, sans-serif;
 }
