remember me appearance

--- a/modals/login/login-style.less
+++ b/modals/login/login-style.less
@@ -51,4 +51,11 @@
   color: #4c4c4c;
   text-decoration: underline;
   font-size: 14px;
+  line-height: 40px;
+  vertical-align: middle;
+}
+
+.remember-label {
+  display: inline;
+  font-size: 16px;
 }
