--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -30,10 +30,10 @@
       </div>
     </div>
     <div class="control-group">
-      <label for="remember">Remember Me</label>
       <div class="controls">
         <input type="checkbox" id="remember" class="checkbox remember-checkbox" checked="checked">
         <label for="remember" class="checkbox-label checkbox-small"></label>
+        <label for="remember" class="remember-label">Remember Me</label>
         <a href="javascript:void(0)" class="forgot-password">Forgot Password</a>
       </div>
     </div>
