--- a/styles/mixins.less
+++ b/styles/mixins.less
@@ -737,6 +737,9 @@
   .checkbox()                 { background-position: -103px -130px; width: 37px; height: 37px; }
   .checkbox-checked()         { background-position:  -28px -130px; width: 37px; height: 37px; }
 
+  .checkbox-small()           { background-position: -157px -119px; width: 24px; height: 24px; }
+  .checkbox-small-checked()   { background-position: -157px -144px; width: 24px; height: 24px; }
+
   .punch-indicator()          { background-position:  -13px -288px; width: 21px; height: 21px; }
   .punched-indicator()        { background-position:  -52px -288px; width: 21px; height: 21px; }
   .elite-punched-indicator()  { background-position:  -93px -288px; width: 21px; height: 21px; }
