changed login modal to use smaller checkbox

--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -32,7 +32,7 @@
     <div class="control-group">
       <div class="controls">
         <input type="checkbox" id="remember" class="checkbox remember-checkbox" checked="checked">
-        <label for="remember" class="checkbox-label checkbox-small"></label>
+        <label for="remember" class="checkbox-label checkbox-label-small"></label>
         <label for="remember" class="remember-label">Remember Me</label>
         <a href="javascript:void(0)" class="forgot-password">Forgot Password</a>
       </div>
