made login-button sprite generic submit-button sprite

--- a/styles/sprite.less
+++ b/styles/sprite.less
@@ -40,7 +40,7 @@
 .elite-punch-indicator,
 .or-divider,
 .facebook-login-button,
-.login-button {
+.submit-button {
   .sprite();
 }
 
@@ -133,7 +133,7 @@
   background-position: -506px -103px;
 }
 
-.login-button {
+.submit-button {
   display: inline-block;
   width: 322px;
   height: 57px;
