--- a/modals/login/login-tmpl.handlebars
+++ b/modals/login/login-tmpl.handlebars
@@ -39,7 +39,7 @@
     </div>
     <div class="control-group">
       <div class="controls">
-        <button type="submit" class="login-button">Log In</button>
+        <button type="submit" class="login-button submit-button">Log In</button>
       </div>
     </div>
   </form>
