--- a/modals/forgot-password/forgot-password-style.less
+++ b/modals/forgot-password/forgot-password-style.less
@@ -16,4 +16,6 @@
   font-size: 20px;
   font-weight: bold;
   text-shadow: 0 -2px 1px rgba(0,0,0,0.3);
+  background-color: transparent;
+  border: 0;
 }
