--- a/modals/location-details/location-details-style.less
+++ b/modals/location-details/location-details-style.less
@@ -22,9 +22,32 @@
   text-align: left;
   padding-left: 24px;
   font-size: 48px;
-  margin-bottom: 8px;
+  margin-bottom: 26px;
+  margin-top: 0;
 }
 
 .location-details-modal .locations-list {
   margin-top: 22px;
+}
+
+.location-details-modal .business-logo {
+  margin-right: 14px;
+  margin-bottom: -18px;
+  width: 64px;
+  height: 64px;
+  border-radius: 2px;
+  border: 1px #969696 solid;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
+}
+
+.location-details-modal .business-logo.with-website {
+  margin-bottom: -20px;
+}
+
+.location-details-modal .business-website {
+  position: absolute;
+  top: 82px;
+  left: 107px;
+  color: #333;
+  font-size: 14px;
 }
