--- a/modals/product-details/product-details-tmpl.handlebars
+++ b/modals/product-details/product-details-tmpl.handlebars
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="span3 page-wrapper">
+  <div class="span3 details-page-wrapper">
     {{! Product Details }}
     {{! Add to Collection }}
   </div>
