fixed register modal layout

--- a/modals/register/register-style.less
+++ b/modals/register/register-style.less
@@ -34,7 +34,27 @@
 }
 
 .register-form .register-field {
-  width:302px;
+  width: 302px;
+}
+
+.register-form .half-width-field {
+  width: 135px;
+}
+
+.half-form-block {
+  width: 157px;
+}
+
+.half-form-block label {
+  font-size: 16px;
+}
+
+.password-block {
+  float: left;
+}
+
+.confirm-password-block {
+  float: right;
 }
 
 .register-button {
@@ -44,18 +64,4 @@
   text-shadow: 0 -2px 1px rgba(0,0,0,0.3);
   border: none;
   background-color: transparent;
-}
-
-.forgot-password {
-  float: right;
-  color: #4c4c4c;
-  text-decoration: underline;
-  font-size: 14px;
-  line-height: 30px;
-  vertical-align: middle;
-}
-
-.remember-label {
-  display: inline;
-  font-size: 16px;
 }
